<!-- res/layout/activity_task_detail.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            android:inputType="text"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description_label"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:id="@+id/textViewAssignToLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_to_label"
            android:layout_marginBottom="4dp"/>


        <EditText
            android:id="@+id/editTextAssignTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_id_hint"
            android:inputType="number"
            android:layout_marginBottom="12dp"/>

        <Spinner
            android:id="@+id/spinnerStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"/>
    </LinearLayout>
</ScrollView>